# mjiang

./: .gitignore  BUILD_AND_TEST.md  COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  DOCS_INDEX.md  FINAL_SUMMARY.md  GETTING_STARTED.md  NEXT_STEPS.md  PROJECT_DELIVERY.md  PROJECT_READY.md  PROJECT_STATUS.md  PUSH_INSTRUCTIONS.md  PUSH_SIMPLE.md  QUICKSTART.md  QUICK_PUSH.md  README.md  README_FINAL.md  SUMMARY.md  TEST_VERIFICATION.md  UPLOAD_QUICKSTART.md  client_net_plan.md  dev_log.md  protocol.md  下一步行动.md  完整测试报告.md  接入完成总结.md  接入执行计划.md  接入进度.md  最终完成总结.md  最终测试总结.md  测试报告.md  测试结果.md  项目交付清单.md  项目完成报告.md  项目完成通知.md
client/: GameLayer_Integration_Guide.md  JSON_PARSER_UPGRADE.md  NetClient.cpp  NetClient.h  NetGameController.cpp  NetGameController.h  TestClientExample.cpp  TestClientExample.h
scripts/: README.md  push_to_github.sh  push_with_token.sh  start_server.sh  test_client.sh  test_multi.sh  upload_to_github.sh
server/: CMakeLists.txt  GAME_ENGINE_INTEGRATION.md  INTEGRATION_CHECKLIST.md  MULTITHREAD_TEST.md  RAPIDJSON_SETUP.md  README_WEBSOCKET.md  TESTING_GUIDE.md
server/src/: JsonHelper.cpp  JsonHelper.h  MessageHandler.cpp  MessageHandler.h  NetPlayer.cpp  NetPlayer.h  Room.cpp  Room.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp  main_websocket.cpp
server/src/game/: GameEngine.cpp  GameEngine.h  IPlayer.h
test/: README.md  package.json  test_client.js  test_game_start.js  test_multi_clients.sh  test_play_card.js  test_simple.js
